--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-external-scan-gun",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "基于 react-native 开发的安卓系统外接设备插件",
   "main": "index.js",
   "keywords": [
@@ -14,5 +14,9 @@
     "扫码枪"
   ],
   "author": "a-fei",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/china-english/react-native-external-scan-gun"
+  }
 }
