--- a/example/ScanGunExample/package.json
+++ b/example/ScanGunExample/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
+    "build:android": "cd android && ./gradlew assembleRelease && cd ..",
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
